--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h2>I am a Researcher and Web Developer</h2>
     <hr />
     <h2>My Video Game Research Project</h2>
-    <a href="http://127.0.0.1:3000/public/Game-research.html"> <img src="./assets/images/For Website_Project 01.png" width="300" alt="a poster with three main characters of video games"/></a>
+    <a href="./public/Game-research.html"> <img src="./assets/images/For Website_Project 01.png" width="300" alt="a poster with three main characters of video games"/></a>
     <h2>Project Invitation for Fellow Researchers</h2>
-    <a href="http://127.0.0.1:3000/public/Project-invitation.html"> <img src="./assets/images/Research.png" width="300" alt="a poster with three main characters of video games"/></a>
+    <a href="./public/Project-invitation.html"> <img src="./assets/images/Research.png" width="300" alt="a poster with three main characters of video games"/></a>
     <hr />
-    <a href="http://127.0.0.1:3000/public/contact.html"><h2>Contact Me</h2></a>
-    <a href="http://127.0.0.1:3000/public/about.html"><h2>About Me</h2></a>
+    <a href="./public/contact.html"><h2>Contact Me</h2></a>
+    <a href="./public/about.html"><h2>About Me</h2></a>
 </body>
 </html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
