--- a/public/contact.html
+++ b/public/contact.html
@@ -1,5 +1,5 @@
 <h1>Contact Me</h1>
-<img />
+<img src="../assets/images/IMG-20250330-WA0010.jpg" width="200"alt="my photo on the bridge connecting two buildings in UAD campus 4"/>
 <p>Tel: +6287810072311</p>
 <p>Email: muhammad.kurniawan@enlitera.uad.ac.id</p>
 <p>Address:</p>
